--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.junit.jupiter:junit-jupiter-params:5.4.2'
 
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'ch.qos.logback:logback-classic:1.4.14'
     testImplementation 'org.assertj:assertj-core:3.16.1'
 
+    implementation 'com.h2database:h2:2.2.224' // H2 데이터베이스 추가
 
 }
 
